# ROS2_tello_driver

./: README.md
drone_socket_library/: CMakeLists.txt  README.md  package.xml
drone_socket_library/include/: drone_socket.h
drone_socket_library/src/: drone_socket.cpp
tello_driver/: CMakeLists.txt  package.xml
tello_driver/src/: autonomous_flight_node.cpp  command_node.cpp  state_node.cpp  video_stream_node.cpp
tf_object_detection/: package.xml  setup.py
tf_object_detection/tf_object_detection/: __init__.py  object_detection_lib.py  tf_object_detection_node.py
